--- a/QtOpenGL/QtOpenGL.vcxproj.filters
+++ b/QtOpenGL/QtOpenGL.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="摄像机类">
       <UniqueIdentifier>{f66c5606-38da-4a00-9580-6d5cf0e0f82f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="轨迹球">
+      <UniqueIdentifier>{98436cbe-cba7-48a9-ad02-9b47599b2548}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="导入模型">
+      <UniqueIdentifier>{3f21ea10-2362-4323-830e-6852089839ac}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <QtRcc Include="QtOpenGL.qrc">
@@ -59,10 +65,25 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TrackBall\ArcBall.cpp">
+      <Filter>轨迹球</Filter>
+    </ClCompile>
+    <ClCompile Include="TrackBall\widget.cpp">
+      <Filter>轨迹球</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>导入模型</Filter>
+    </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>导入模型</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="PaintingWidget.h">
       <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="TrackBall\widget.h">
+      <Filter>轨迹球</Filter>
     </QtMoc>
   </ItemGroup>
   <ItemGroup>
@@ -72,6 +93,15 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TrackBall\ArcBall.h">
+      <Filter>轨迹球</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
+      <Filter>导入模型</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>导入模型</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="FragmentSource.txt">
@@ -80,5 +110,8 @@
     <Text Include="VertexSource.txt">
       <Filter>着色器</Filter>
     </Text>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
